- texture categories for subfolders/subwads inside pk3 resource archives
- texture categories remember which one you clicked on properly
- when drag-selecting, hold alt when you release-click to drag-deselect instead
- if you hold alt when you start to drag things, it duplicates them instead.
- bmsq added long texture name support. thanks bmsq!
- moved "Grid Increase" / "Grid Decrease" to be beside each other in the hotkey setup
- fixed a minor bug with displaying texture counts in the browser
- merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)
- internal changes to how selection is "converted" when switching modes, this should not cause visible behavioral differences, this is just to allow for the new Lua mode to work properly. please report any weird new behavior regarding selection.
- minor tweaks to status bar flavor text
- made it so that the initial directory for the file dialog is separate based on whether it's wads, resources, or prefabs
- fixed certain panels not displaying textures/sprites in windows 8/10 High Contrast mode
- fixed a crash when double click editing sectors in make sectors mode
- fixed negative lighting values not always working right
- fixed lighting levels to clamp to 0-256 not 0-255. you can still manually type in negative or >256 values
- if you press alt or ctrl while drag selecting it doesnt stop selecting
- some things that use the same sprites have been changed to have their editor preview to use a different frame (demon/spectre for example)

version 2.1.3.10
=====================
- fixed newly drawn geometry merging incorrectly in rare circumstances
- fixed inconsistent behavior when drawing new geometry counterclockwise to more resemble the DB2 behavior
- fixed some weirdnesses with the Map Options screen if you had the first game config selected (Boom by default)