@@ -10,6 +10,7 @@ version 2.1.3.12
 - when drag-selecting, hold alt when you release-click to drag-deselect instead
 - if you hold alt when you start to drag things, it duplicates them instead.
 - bmsq added long texture name support. thanks bmsq!
+- drag/dropping a wad file on main window when nothing is open, now opens that wad
 - moved "Grid Increase" / "Grid Decrease" to be beside each other in the hotkey setup
 - fixed a minor bug with displaying texture counts in the browser
 - merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)
